--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,7 +1,7 @@
 Package: batchCorr
 Type: Package
 Title: Within And Between Batch Correction Of LC-MS Metabolomics Data
-Version: 0.1.3
+Version: 0.1.4
 Date: 2015-11-30
 Author: Carl Brunius <carl.brunius@slu.se>
 Maintainer: Carl Brunius <carl.brunius@slu.se>
@@ -9,6 +9,7 @@ Description: (BA) Batch alignment (of systematic misalignment between batches),
     (DC) Cluster-based within batch intensity drift correction,
     (BN) Between-batch normalization based on Ref sample intensity if passing quality heuristic.
 License: GPL-2
+Depends: R (>= 2.10)
 Imports:
     xcms,
     reshape,
