--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,19 +5,20 @@ export(align)
 export(alignIndex)
 export(batchAlign)
 export(batchFlag)
-export(cleanVar3)
+export(cleanVar)
 export(clust)
 export(clustSplit)
 export(clusterMatrix)
 export(cv)
 export(driftCalc)
-export(driftCorr3)
-export(driftWrap3)
+export(driftCorr)
+export(driftWrap)
 export(grabAlign)
 export(grabBatch)
 export(grabQC)
 export(grabRef)
 export(grabWrap)
+export(grabWrapBA)
 export(peakInfo)
 export(peakTab)
 export(plotAlign)
