--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,6 +4,7 @@ export(aggregateIndex)
 export(align)
 export(alignIndex)
 export(batchAlign)
+export(batchComb)
 export(batchFlag)
 export(cleanVar)
 export(clust)
@@ -13,6 +14,7 @@ export(cv)
 export(driftCalc)
 export(driftCorr)
 export(driftWrap)
+export(featComb)
 export(grabAlign)
 export(grabBatch)
 export(grabQC)
