added makeQCObject & makeBatchObject & merged refOut with refCorr

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -21,6 +21,8 @@ export(grabQC)
 export(grabRef)
 export(grabWrap)
 export(grabWrapBA)
+export(makeBatchObject)
+export(makeQCObject)
 export(peakInfo)
 export(peakTab)
 export(plotAlign)
