--- a/NAMESPACE
+++ b/NAMESPACE
@@ -15,12 +15,9 @@ export(driftCalc)
 export(driftCorr)
 export(driftWrap)
 export(featComb)
+export(getBatch)
+export(getGroup)
 export(grabAlign)
-export(grabBatch)
-export(grabQC)
-export(grabRef)
-export(grabWrap)
-export(grabWrapBA)
 export(makeBatchObject)
 export(makeQCObject)
 export(peakInfo)
