--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,6 +2,7 @@
 
 export(aggregateIndex)
 export(align)
+export(alignBatches)
 export(alignIndex)
 export(batchAlign)
 export(batchComb)
@@ -10,6 +11,7 @@ export(cleanVar)
 export(clust)
 export(clustSplit)
 export(clusterMatrix)
+export(correctDrift)
 export(cv)
 export(driftCalc)
 export(driftCorr)
