--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -3,8 +3,8 @@ Type: Package
 Title: Within And Between Batch Correction Of LC-MS Metabolomics Data
 Version: 0.2.1
 Date: 2016-04-12
-Author: Carl Brunius <carl.brunius@slu.se>
-Maintainer: Carl Brunius <carl.brunius@slu.se>
+Author: Carl Brunius <carl.brunius@chalmers.se>
+Maintainer: Carl Brunius <carl.brunius@chalmers.se>
 Description: (BA) Batch alignment (of systematic misalignment between batches),
     (DC) Cluster-based within batch intensity drift correction,
     (BN) Between-batch normalization based on Ref sample intensity if passing quality heuristic.
