--- a/NAMESPACE
+++ b/NAMESPACE
@@ -22,6 +22,7 @@ export(getGroup)
 export(grabAlign)
 export(makeBatchObject)
 export(makeQCObject)
+export(mergeBatches)
 export(peakInfo)
 export(peakTab)
 export(plotAlign)
