--- a/NAMESPACE
+++ b/NAMESPACE
@@ -23,6 +23,7 @@ export(grabAlign)
 export(makeBatchObject)
 export(makeQCObject)
 export(mergeBatches)
+export(normalizeBatches)
 export(peakInfo)
 export(peakTab)
 export(plotAlign)
