--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,8 +1,8 @@
 Package: batchCorr
 Type: Package
 Title: Within And Between Batch Correction Of LC-MS Metabolomics Data
-Version: 0.2.4
-Date: 2016-04-12
+Version: 0.2.5
+Date: 2020-05-29
 Author: Carl Brunius <carl.brunius@chalmers.se>
 Maintainer: Carl Brunius <carl.brunius@chalmers.se>
 Description: (BA) Batch alignment (of systematic misalignment between batches),
@@ -12,8 +12,7 @@ License: GPL-2
 Depends: R (>= 2.10)
 Imports:
     reshape,
-    mclust,
-    rgl
+    mclust
 LazyData: TRUE
 RoxygenNote: 7.0.0
 Encoding: UTF-8
