Fix piecemeal errors, warnings and checks from R CMD check, BiocCheck::BiocCheck and BiocCheck::BiocCheckGitClone
Many small changes to non-code files regarding author information, 
version. Some changes to namespace using @import and @importFrom roxygen 
tags. Some small code changes: using TRUE/FALSE instead of T/F and using 
vapply instead of sapply.

--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,10 @@
-.Rproj.user
+Meta
+doc
+.Rproject/*
+.Rproj.user/*
 .Rhistory
-.RData
-.Ruserdata
-Exclude/
-.gitignore
-.Rbuildignore
-*.Rproj
+.Rproj.user
+renv/*
+renv.lock
+/doc/
+/Meta/
