--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,18 +1,21 @@
 Package: batchCorr
 Type: Package
 Title: Within And Between Batch Correction Of LC-MS Metabolomics Data
-Version: 0.2.5
+Version: 0.99.0
 Date: 2020-05-29
-Author: Carl Brunius <carl.brunius@chalmers.se>
-Maintainer: Carl Brunius <carl.brunius@chalmers.se>
-Description: (BA) Batch alignment (of systematic misalignment between batches),
-    (DC) Cluster-based within batch intensity drift correction,
-    (BN) Between-batch normalization based on Ref sample intensity if passing quality heuristic.
+Authors@R: c(
+    person("Carl", "Brunius", email = "carl.brunius@chalmers.se", role = c("aut", "cre"), comment = c(ORCID = "0000-0003-3957-870X")),
+    person("Anton", "Ribbenstedt", role = "aut"),
+    person("Vilhelm", "Suksi", role = c("aut")))
+Description: From the perspective of metabolites as the continuation of the central dogma of biology, metabolomics provides the closest link to many phenotypes of interest. This makes metabolomics research promising in teasing apart the complexities of living systems. However, due to experimental reasons, the data includes non-biological variation which limits quality and reproducibility, especially if the data is obtained from several batches. The batchCorr package reduces unwanted variation by way of between-batch alignment, within-batch drift correction and between-batch normalization using batch-specific quality control samples and long-term reference QC samples. Please see the associated article [@brunius2016large] for more thorough descriptions of algorithms.
 License: GPL-2
-Depends: R (>= 2.10)
-Imports:
-    reshape,
-    mclust
-LazyData: TRUE
-RoxygenNote: 7.0.0
+biocViews: BiomedicalInformatics, Metabolomics, MassSpectrometry, BatchEffect, Normalization
+Depends: R (>= 4.4.0)
+Imports: reshape, mclust
+Suggests: testthat, knitr
+LazyData: FALSE
+RoxygenNote: 7.3.1
 Encoding: UTF-8
+URL: https://gitlab.com/CarlBrunius/batchCorr
+BugReports: https://gitlab.com/CarlBrunius/batchCorr/-/issues
+VignetteBuilder: knitr
