--- a/NAMESPACE
+++ b/NAMESPACE
@@ -31,3 +31,23 @@ export(plotClust)
 export(refCorr)
 export(refOut)
 export(rmsDist)
+import(mclust)
+import(reshape)
+importFrom(grDevices,dev.off)
+importFrom(grDevices,pdf)
+importFrom(grDevices,png)
+importFrom(grDevices,rgb)
+importFrom(graphics,hist)
+importFrom(graphics,legend)
+importFrom(graphics,lines)
+importFrom(graphics,matplot)
+importFrom(graphics,par)
+importFrom(graphics,points)
+importFrom(stats,aggregate)
+importFrom(stats,dist)
+importFrom(stats,lm)
+importFrom(stats,loess)
+importFrom(stats,median)
+importFrom(stats,predict)
+importFrom(stats,quantile)
+importFrom(stats,smooth.spline)
